--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Acerca de</a></li>
                     <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Inicio</a></li>
+                    
                 </ul>
             </nav>
 
@@ -38,8 +38,8 @@
 
 
 
-   <section class="Coffee">
-    <img class="coffee-img" src="IMG/bg2.png" alt="">
+   <section class="coffee">
+    <img class="coffee-img" src="" alt="">
     <div class="coffee-content container">
         <h2>
             Alimentación Saludable
@@ -48,40 +48,50 @@
             La dieta de la milpa tiene tres características: diversidad, adaptabilidad e integración.
         </p>
         <div class="coffee-group">
-            <div class="coffe-1">
-                <img src="IMG/c1.png" alt="">
+            <div class="coffee-1">
+                <img src="IMG/elote.png" alt="">
                 <h3>Nutricion en México</h3>
                 <p>
-                    Una alimentación adecuada promueve la salud y el bienestar físico
-                     y emocional de las personas. Alimentarse no consiste sólo en comer para saciar el hambre, sino en consumir alimentos que nutran a nuestro organismo de una manera equilibrada, de acuerdo con las características de cada persona, para tener una vida saludable.
+                    Una alimentación adecuada promueve la salud y el bienestar físico 
+                     y emocional de las personas. Alimentarse no consiste sólo en comer para saciar el hambre,
+                      sino en consumir alimentos que nutran a nuestro organismo de una manera equilibrada, 
+                      de acuerdo con las características de cada persona, para tener una vida saludable. 
 
                 </p>
             </div>
-            <div class="coffe-1">
-                <img src="IMG/c2.png" alt="">
-                <h3>Café Lorem</h3>
+            <div class="coffee-1">
+                <img src="IMG/elote.png" alt="">
+                <h3>La dieta de la milpa</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                     Laborum est dolore praesentium quisquam illo!<br>
-                      Ea pariatur dolorem odit aliquam, quasi quo impedit?<br> 
-                      Minus amet nobis fuga nemo debitis aliquam consequatur!<br>
+                    La dieta de la milpa es un modelo de alimentación saludable de origen mesoamericano,
+                     que tiene como centro nutritivo a los productos de la milpa: maíz, frijol, chile y calabaza.
+                      Además de otros alimentos de origen mesoamericano que se consumen en México, 
+                      junto con aquellos adoptados por la cocina tradicional mexicana de origen externo,
+                       combinados de forma saludable.
 
                 </p>
             </div>
-            <div class="coffe-1">
-                <img src="IMG/c3.png" alt="">
-                <h3>Café Lorem</h3>
+            <div class="coffee-1">
+                <img src="IMG/elote.png" alt="">
+                <h3>Sellos</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                     Laborum est dolore praesentium quisquam illo!<br>
-                      Ea pariatur dolorem odit aliquam, quasi quo impedit?<br> 
-                      Minus amet nobis fuga nemo debitis aliquam consequatur!<br>
+                    El etiquetado frontal de advertencia es una estrategia para prevenir y controlar la obesidad
+                     y las enfermedades no transmisibles, asociadas al consumo de productos ultraprocesados.
+                      Consta de 5 sellos de advertencia (exceso de calorías, azúcares, sodio, grasas trans y grasas saturadas) 
+                      y 2 leyendas precautorias para proteger a niñas y niños de efectos adversos por el
+                       consumo de edulcorantes y cafeína.
 
                 </p>
             </div>
 
         </div>
+        <a href="#" class="btn-1"> Consulta Personalizada</a>
     </div>
    </section> 
+
+
+
+
+
 </body>
 </html>
